chore: set root logging level to INFO

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 
 logging:
   level:
-    root: DEBUG
+    root: INFO
 
 # Note:
 # - Default profile uses in-memory H2 so the app runs without external DB.
